[style] ./gradlew ktlintFormatによる機械的なリフォーマット (#39)