@@ -77,3 +77,12 @@ task ktlint(type: JavaExec, group: "verification") {
   ignoreExitValue true
 }
 check.dependsOn ktlint
+
+task ktlintFormat(type: JavaExec, group: "formatting") {
+  description = "Fix Kotlin code style deviations."
+  classpath = configurations.ktlint
+  main = "com.pinterest.ktlint.Main"
+  args "-F", "src/**/*.kt"
+  jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
+  ignoreExitValue true
+}
